--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,12 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app_simple:app
+    startCommand: gunicorn app_simple:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --log-level info
     envVars:
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
-    healthCheckPath: /
+      - key: PYTHONUNBUFFERED
+        value: "1"
+    healthCheckPath: /health
